Fix vertical menu item alignment

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ h1,h2,h3,h4,h5,h6 {
     vertical-align: middle;
     border: none;
     border-radius: initial;
-    padding: 1px 5px;
+    padding: 6px 5px;
     margin: 0 25px;
     text-decoration: none !important;
   }
